--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Patrick Barrett <patrickbarrett@exosite.com>"]
 regex = "0.1"
 rust-crypto = "^0.2"
 time = "0.1.34"
+pcre = "0.2.1"
 
 [[bin]]
 name = "day1"
